data/derived/sp14/progs/unify/prog0179.ml.out
Characters 109-110:
  | h::m::t -> (mulByDigit i (m::t)) @ ( ( (h*i)/10 ) + (m*i) mod 10 :: ( (h*i) mod 10 ) :: [] );;
                                            ^
Error: This expression has type 'a list
       but an expression was expected of type int
